--- a/ibl-logistica-backend/docker/dockerfile
+++ b/ibl-logistica-backend/docker/dockerfile
@@ -1,5 +1,5 @@
 FROM postgres:latest
 
-COPY ./scripts/init.sql /docker-entrypoint-initdb.d/
+# COPY ./scripts/init.sql /docker-entrypoint-initdb.d/
 
 EXPOSE 5432
